--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 		</main>
 		
 			<footer>
-				<p id="two"><a href="https://monoskop.org/Axis#mediaviewer/File:Axis_3_Jul_1935.jpg"></li>" two shillings and sexpence</p> </a>
+				<p id="two"><a href="https://monoskop.org/Axis#mediaviewer/File:Axis_3_Jul_1935.jpg"></li>" two shillings and sexpence</a></p> 
 			</footer>
 	</div>
 </body>
